gateway/k8s/k8sgateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: sp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: 418295678070.dkr.ecr.ap-northeast-2.amazonaws.com/silverpotion/gateway:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.8"
              memory: "500Mi"
            requests:
              cpu: "0.3"
              memory: "250Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: sp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: gateway
