gateway/k8s/postDepl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: post
  namespace: sp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: post
  template:
    metadata:
      labels:
        app: post
    spec:
      containers:
        - name: user
          image: 418295678070.dkr.ecr.ap-northeast-2.amazonaws.com/silverpotion/post:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "1"
              memory: "500Mi"
            requests:
              cpu: "0.5"
              memory: "250Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: post-service
  namespace: sp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: post
